--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 29
@@ -6,22 +7,30 @@ android {
 
     defaultConfig {
         applicationId "com.overgara.baseandroidproject"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled = true
     }
 
     buildTypes {
         release {
+            buildConfigField "String", "LOGIN_BASE_URL", "\"https://shoppingproducts.herokuapp.com\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
         debug {
+            buildConfigField "String", "LOGIN_BASE_URL", "\"https://shoppingproducts.herokuapp.com\""
             minifyEnabled false
             debuggable true
         }
+    }
+
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 
     viewBinding {
@@ -31,34 +40,61 @@ android {
 }
 
 dependencies {
-    def daggerVersion = '2.23.2'
     def mockitoVersion = '1.10.19'
-    def powerMockitoVersion = '1.6.2'
+    def retrofitVersion = '2.4.0'
+    def room_version = "2.2.5"
+    def nav_version = "2.3.0"
+    def hilt_version = '2.28.3-alpha'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    //View
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.google.android.material:material:1.2.0'
+
+    //Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    annotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+
+    // Hilt For local unit tests
+    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    testAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    //RxJava's libraries
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+
+    //okhttp's libraries
+    implementation 'com.squareup.okhttp3:okhttp:3.12.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'
+    implementation group: 'commons-lang', name: 'commons-lang', version: '2.2'
+
+    //Util
+    implementation 'com.google.guava:guava:29.0-jre'
     implementation 'com.google.code.gson:gson:2.8.6'
-    //Test
-    //testImplementation "org.mockito:mockito-all:$mockitoVersion"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
-    //testImplementation "org.powermock:powermock-module-junit4:$powerMockitoVersion"
-    //testImplementation "org.powermock:powermock-api-mockito:$powerMockitoVersion"
+    //RoomDatabase
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
 
-    //testImplementation 'org.robolectric:robolectric:4.3'
+    //Retrofit's libraries
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+    implementation 'com.squareup.retrofit2:converter-jackson:2.1.0'
 
-    // Dagger for test
-    //testImplementation "com.google.dagger:dagger-compiler:$daggerVersion"
-    //testImplementation "com.google.dagger:dagger-android-processor:$daggerVersion"
-    //testAnnotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
-    //testAnnotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 
-    // Dagger 2
-    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
-    implementation "com.google.dagger:dagger:$daggerVersion"
-    implementation "com.google.dagger:dagger-android:$daggerVersion"
-    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
-    implementation 'com.google.android.material:material:1.1.0'
 }
